# nezumi

./: .gitignore  Cargo.toml  README.md  flake.nix  mouse.toml
src/: main.rs  mouse.rs
